tests/build/cases/widget_new/missing_field_all_single.stderr
error[E0277]: the trait bound `(): IntoVar<SideOffsets>` is not satisfied
  --> cases/widget_new/missing_field_all_single.rs:8:18
   |
8  |         margin = { }
   |                  -^^
   |                  |
   |                  the trait `IntoVar<SideOffsets>` is not implemented for `()`
   |                  required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <(&'static [u8; N], F) as IntoVar<ImageSource>>
             <(&'static [u8; N], F) as IntoVar<WindowIcon>>
             <(&'static [u8], F) as IntoVar<ImageSource>>
             <(&'static [u8], F) as IntoVar<WindowIcon>>
           and 33 others
note: required by a bound in `margin_ArgsImpl::<T_margin>::new`
  --> $WORKSPACE/zero-ui/src/properties/layout.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |                                                ^^^^^^^^^^^^^^^^^^^^ required by this bound in `margin_ArgsImpl::<T_margin>::new`
